@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.951 2013/01/14 14:48:19 bouyer Exp $
+# $NetBSD: Makefile,v 1.952 2013/01/19 10:22:11 manu Exp $
 #
 
 COMMENT=	Networking tools
@@ -308,6 +308,7 @@ SUBDIR+=	nagios-plugin-ldap
 SUBDIR+=	nagios-plugin-mysql
 SUBDIR+=	nagios-plugin-pgsql
 SUBDIR+=	nagios-plugin-radius
+SUBDIR+=	nagios-plugin-raidctl
 SUBDIR+=	nagios-plugin-snmp
 SUBDIR+=	nagios-plugin-spamd
 SUBDIR+=	nagios-plugins
